--- a/tpms/src/main/resources/application.properties
+++ b/tpms/src/main/resources/application.properties
@@ -1,12 +1,16 @@
 server.port=9999
 server.servlet.context-path=/tpms
+
+#server.port=9990
+#server.servlet.context-path=/tpmsapi
+
 #server.error.whitelabel.enabled=false
 #server.error.path=/error
-spring.datasource.url=jdbc:mysql://localhost:3306/tpms_new
+spring.datasource.url=jdbc:mysql://localhost:3306/tpms
 #spring.datasource.url=jdbc:mysql://172.27.29.135:3306/tpms
 spring.datasource.username = root
-spring.datasource.password = root
-#spring.datasource.password = csmpl@123
+#spring.datasource.password = root
+spring.datasource.password = csmpl@123
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 user.default.password=Csmtech@123
 
@@ -29,3 +33,15 @@ upload-dir=D:/TPMS_SERVE/
 #JWT Token validty time
 jwt.token.validity.minutes=900
 #server.servlet.session.timeout=1800 
+#management.endpoints.web.exposure.include=health,info
+info.app.description=this is the sample project
+#info.app.version=1.0
+management.endpoints.web.exposure.include=*
+management.info.env.enabled=true
+info.app.name=RestCurd
+management.endpoint.health.show-details=always
+management.endpoint.shutdown.enabled=true
+management.endpoints.web.base-path=/actuator
+
+# Swagger
+springdoc.api-docs.path=/api-docs
